[B]Version 0.2.0[/B]
- Added multiple sources for EPG data; defaults is YouSee.tv with logo support
- Refactored navigation logic

[B]Version 0.1.0[/B]
- First public release
- Basic functionality is in place, but needs fine tuning

[B]Version 0.0.2[/B]
- Test version

[B]Version 0.0.1[/B]
- Proof of concept