@@ -1,13 +1,13 @@
 <?xml version="1.0" encoding="UTF-8" standalone="yes"?>
 <addon id="script.tvguide"
        name="Danish TV Guide"
-       version="0.2.0"
+       version="0.2.1"
        provider-name="twinther [tommy@winther.nu]">
   <requires>
     <import addon="xbmc.python"/>
-		<import addon="script.module.danishaddons"/>
-		<import addon="script.module.simplejson"/>
-		<import addon="script.module.elementtree"/>
+		<import addon="script.module.danishaddons" version="1.1.0"/>
+		<import addon="script.module.simplejson" version="2.0.10"/>
+		<import addon="script.module.elementtree" version="2.0.10"/>
   </requires>
   <extension point="xbmc.python.script" library="addon.py"/>
   <extension point="xbmc.addon.metadata">
