@@ -20,7 +20,7 @@ class Navigation:
 		self.controlInFocus = currentControl
 
 		(left, top) = currentControl.getPosition()
-		if(left > self.focusX or left + currentControl.getWidth() < self.focusX):
+		if left > self.focusX or left + currentControl.getWidth() < self.focusX:
 			self.focusX = left
 
 	def onAction(self, action, window, controlIds):
@@ -28,7 +28,7 @@ class Navigation:
 			print "action.id = %d" % action.getId()
 			print "self.focusX = %d" % self.focusX
 
-			if(action.getId() == KEY_BACK):
+			if action.getId() == KEY_BACK:
 				window.close()
 				return
 
@@ -38,9 +38,9 @@ class Navigation:
 
 			print "currentX = %d, currentY = %d" % (currentX, currentY)
 
-			if(action.getId() == KEY_LEFT):
+			if action.getId() == KEY_LEFT:
 				control = self.findControlOnLeft(window, controlIds, currentX, currentY)
-				if(control == None):
+				if control is None:
 					window.date -= datetime.timedelta(hours = 2)
 					window._redraw(self.channelIndex, window.date)
 					control = self.findControlOnLeft(window, window.controlToProgramMap.keys(), 1280, currentY)
@@ -49,9 +49,9 @@ class Navigation:
 				(left, top) = control.getPosition()
 				self.focusX = left
 
-			elif(action.getId() == KEY_RIGHT):
+			elif action.getId() == KEY_RIGHT:
 				control = self.findControlOnRight(window, controlIds, currentX, currentY)
-				if(control == None):
+				if control is None:
 					window.date += datetime.timedelta(hours = 2)
 					window._redraw(self.channelIndex, window.date)
 					control = self.findControlOnRight(window, window.controlToProgramMap.keys(), 0, currentY)
@@ -60,19 +60,19 @@ class Navigation:
 				(left, top) = control.getPosition()
 				self.focusX = left
 
-			elif(action.getId() == KEY_UP):
+			elif action.getId() == KEY_UP:
 				control = self.findControlAbove(window, controlIds, currentX, currentY)
-				if(control == None):
+				if control is None:
 					self.channelIndex = window._redraw(self.channelIndex - CHANNELS_PER_PAGE, window.date)
 					control = self.findControlAbove(window, window.controlToProgramMap.keys(), currentX, 720)
 
-			elif(action.getId() == KEY_DOWN):
+			elif action.getId() == KEY_DOWN:
 				control = self.findControlBelow(window, controlIds, currentX, currentY)
-				if(control == None):
+				if control is None:
 					self.channelIndex = window._redraw(self.channelIndex + CHANNELS_PER_PAGE, window.date)
 					control = self.findControlBelow(window, window.controlToProgramMap.keys(), currentX, 0)
 
-			if(not(control == None)):
+			if control is not None:
 				window.setFocus(control)
 
 
@@ -88,10 +88,10 @@ class Navigation:
 
 			print "x = %d, y = %d" % (x, y)
 
-			if(currentX < x and currentY == y):
+			if currentX < x and currentY == y:
 				distance = abs(currentX - x)
 				print "distance = %d" % distance
-				if(distance < distanceToNearest):
+				if distance < distanceToNearest:
 					distanceToNearest = distance
 					nearestControl = control
 
@@ -109,9 +109,9 @@ class Navigation:
 			x = left + (control.getWidth() / 2)
 			y = top + (control.getHeight() / 2)
 
-			if(currentX > x and currentY == y):
+			if currentX > x and currentY == y:
 				distance = abs(currentX - x)
-				if(distance < distanceToNearest):
+				if distance < distanceToNearest:
 					distanceToNearest = distance
 					nearestControl = control
 
@@ -126,9 +126,9 @@ class Navigation:
 			x = left + (control.getWidth() / 2)
 			y = top + (control.getHeight() / 2)
 
-			if(currentY < y):
+			if currentY < y:
 				if(left <= self.focusX and left + control.getWidth() > self.focusX
-					and (nearestControl == None or nearestControl.getPosition()[1] > top)):
+					and (nearestControl is None or nearestControl.getPosition()[1] > top)):
 					nearestControl = control
 					print "nearestControl = %s" % nearestControl
 
@@ -143,9 +143,9 @@ class Navigation:
 			x = left + (control.getWidth() / 2)
 			y = top + (control.getHeight() / 2)
 
-			if(currentY > y):
+			if currentY > y:
 				if(left <= self.focusX and left + control.getWidth() > self.focusX
-					and (nearestControl == None or nearestControl.getPosition()[1] < top)):
+					and (nearestControl is None or nearestControl.getPosition()[1] < top)):
 					nearestControl = control
 					print "nearestControl = %s" % nearestControl
 
