@@ -1,3 +1,6 @@
+[B]Version 0.2.1[/B]
+- Use danishaddons module version 1.1.0
+
 [B]Version 0.2.0[/B]
 - Added multiple sources for EPG data; defaults is YouSee.tv with logo support
 - Refactored navigation logic
